--- a/public/assets/style-home.css
+++ b/public/assets/style-home.css
@@ -82,8 +82,17 @@
 }
 
 .logo{
-  padding:20px;
+  padding:20px ;
+  margin-bottom: 90px;
 }
+.logo img{
+ 
+  height: 100px;
+  width: 240px;
+  margin-left: -30px;
+ 
+}
+
 
 nav ul{
   margin:0;
