--- a/public/assets/style-usuarios.css
+++ b/public/assets/style-usuarios.css
@@ -5,7 +5,7 @@
 }
 
 .Encabezado {
-  background-color:  #4215ac;
+  background-color: #4215ac;
   display: grid;
   grid-template-columns: 80% 10% 10%;
   height: 50%;
@@ -61,21 +61,25 @@
 .Usuario :hover {
   color: rgb(32, 223, 236);
 }
+
 .Menu {
-  height: 30%; 
+  height: 30%;
 }
+
 .Menu li a img {
-margin: 2%;
-height: 12%;
-width: 12%;
+  margin: 2%;
+  height: 12%;
+  width: 12%;
 }
+
 .Prueba {
-margin-top: 56%;
+  margin-top: 56%;
 }
+
 .Prueba li a img {
-height: 12%;
-width: 12%;
-margin-right: 3%;
+  height: 12%;
+  width: 12%;
+  margin-right: 3%;
 }
 
 body {
@@ -85,16 +89,17 @@ body {
   background: white;
 }
 
-.logo{
-  padding:20px ;
+.logo {
+  padding: 20px;
   margin-bottom: 90px;
 }
-.logo img{
- 
+
+.logo img {
+
   height: 100px;
   width: 240px;
   margin-left: -30px;
- 
+
 }
 
 nav ul {
@@ -138,37 +143,39 @@ section {
   text-transform: uppercase;
   font-size: 30px;
 }
-.wrapper a{
+
+.wrapper a {
   text-decoration: none;
 }
 
 .Principal {
 
   display: grid;
-  grid-template-columns: 50% 50% ;
+  grid-template-columns: 50% 50%;
   align-items: center;
   height: 20vh;
-  color :white;
+  color: white;
 }
 
 .Principal-Uno {
   display: grid;
   grid-template-columns: 30% 70%;
-  background-color: #096ddf;
+  background-color: #25d4eb;
   grid: 40% 60%;
   margin: 5%;
   height: 80%;
   border-radius: 4%;
   width: 90%;
   margin: 5%;
- 
+
 
 }
-.Principal-Uno img{
+
+.Principal-Uno img {
   width: 100%;
   height: 80%;
   margin-top: 14%;
-  
+
 
 
 }
@@ -176,33 +183,46 @@ section {
 .Principal-Dos {
   display: grid;
   grid-template-columns: 30% 70%;
-  background-color: #1973db;
+  background-color: #5be662;
   grid: 40% 60%;
   margin: 5%;
   height: 80%;
   border-radius: 4%;
   width: 90%;
 }
-.Principal-Dos img{
+
+.Principal-Dos img {
   width: 90%;
   height: 80%;
   margin-top: 14%;
-  
+
 
 
 }
 
 
 
-.Uno-lef {
+.Principal-Uno .Uno-lef {
   display: inline-block;
   position: left;
-  background-color: #1e7deb;
+  background-color: #25c3df;
   border-radius: 4%;
   width: 100%;
   text-align: center;
- 
+
 }
+
+.Principal-Dos .Uno-lef {
+  display: inline-block;
+  position: left;
+  background-color: #25df4d;
+  border-radius: 4%;
+  width: 100%;
+  text-align: center;
+
+}
+
+
 
 .Uno-right {
   display: inline-block;
@@ -210,40 +230,54 @@ section {
   border-radius: 4%;
   text-align: center;
   width: 100%;
-  
-  
+
+
 }
+
 .Uno-right h2 {
- color: white;
- font-size: 25px ;
- margin-top: 45%;
+  color: rgb(255, 255, 255);
+  font-size: 25px;
+  margin-top: 45%;
 }
 
 .Contenido {
 
   display: grid;
-  grid-template-columns: 30% 70% ;
-  align-items: center;
-  height: 84vh;
-  color :rgb(14, 13, 13);
+  grid-template-columns: 70% 30%;
+  align-items: left;
+  height: 94vh;
+  color: rgb(14, 13, 13);
+
 }
 
+
 .Contenido-Uno {
-  background-color: #3e6dd1;
+  background-color: #e4e3e3;
   margin: 5%;
-  height: 80vh;
-  border-radius: 5%;
+  height: 90vh;
   margin-top: 200px;
+  border-radius: 25px;
 }
 
 .Contenido-Dos {
-  background-color: #ffffff;
-  margin: 5%;
-  height: 80vh;
+  background-color: hsla(187, 85%, 79%, 0.953);
+  height: 90vh;
+  border-radius: 25px;
+  margin: 10px;
   margin-top: 200px;
+
 }
+
+.Contenido-Dos h2 {
+  margin: 4%;
+  text-align: center;
+  font-size: 36px;
+  font-weight: bold;
+  color: rgb(34, 8, 150);
+}
+
 .Contenedor {
-  background-color: hsla(226, 82%, 30%, 0.953);
+  background-color: hsla(187, 85%, 79%, 0.953);
   color: rgb(15, 14, 14);
   height: 74vh;
   width: 90%;
@@ -255,31 +289,43 @@ section {
 
 .Contenedor input {
   width: 80%;
-  height: 32px; 
+  height: 32px;
   margin-left: 8%;
   border-radius: 8px;
-  border-color: #0d1186;
-  padding: 6px; 
+  border-color: transparent;
+  padding: 6px;
   font-size: 16px;
 }
 
 .Contenedor label {
   width: 90%;
   padding: 4%;
-  text-align: center;
-  font-size: 18px;
-  color: white;
+  text-align: left;
+  margin-left: 14px;
+  font-size: 24px;
+  font-weight: bold;
+  color: rgb(34, 8, 150);
 }
+
 
 .Contenedor button {
   margin-left: 80px;
   margin-top: 8%;
   padding: 4%;
   width: 50%;
-  background-color: #0574f3;
-  border-color: #3a0168;
+  font-size: 22px;
+  background-color: #359df1;
+  border-color: #1b4cb8;
   border-radius: 25px;
   color: white;
+}
+
+footer {
+  margin-top: 200px;
+  height: 4vh;
+  background-color: #ffffff;
+
+
 }
 
 
@@ -310,31 +356,33 @@ section {
 @media (min-width: 1800px) {
   .Uno-right h2 {
     color: white;
-    font-size: 55px ;
+    font-size: 55px;
     margin-top: 35%;
-   }
+  }
 }
 
 @media (min-width: 1200px) {
   .Uno-right h2 {
     color: white;
-    font-size: 45px ;
+    font-size: 45px;
     margin-top: 25%;
-   }
+  }
 }
+
 @media (min-width: 1000px) {
   .Uno-right h2 {
     color: white;
-    font-size: 40px ;
+    font-size: 40px;
     margin-top: 25%;
-   }
+  }
 }
+
 @media (max-width: 800px) {
   .Uno-right h2 {
     color: white;
-    font-size: 15px ;
+    font-size: 15px;
     margin-top: 125%;
-   }
+  }
 }
 
 @media (max-width: 500px) {
@@ -343,8 +391,9 @@ section {
     margin: 25%;
     width: 160%;
     height: 30%;
-  
+
   }
+
   .Usuario {
     margin-top: 85%;
     margin-left: 15%;
@@ -353,27 +402,31 @@ section {
     position: right;
     color: White;
   }
+
   .Uno-right h2 {
     color: white;
-    font-size: 12px ;
+    font-size: 12px;
     margin-top: 200%;
-   }
-   .Principal-Uno img{
-    width: 80%;
-    height: 80%;
-    margin-top: 30%;
-  
   }
-  .Principal-Dos img{
+
+  .Principal-Uno img {
     width: 80%;
     height: 80%;
     margin-top: 30%;
-  
+
   }
-  .Principal-Tres img{
+
+  .Principal-Dos img {
     width: 80%;
     height: 80%;
     margin-top: 30%;
-  
+
+  }
+
+  .Principal-Tres img {
+    width: 80%;
+    height: 80%;
+    margin-top: 30%;
+
   }
 }
