--- a/public/assets/style-home.css
+++ b/public/assets/style-home.css
@@ -297,12 +297,12 @@ background-color: white;
 .Principal{
   height:60vh;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 70% 30%;
   margin-top: -0.2%;
 }
 .Principal-Left{
   background-color: rgb(241, 244, 248);
-  height: 30vh auto ;
+  height: 40vh auto ;
   text-align: center;
   margin: 2%;
   border-radius: 2%;
@@ -312,7 +312,7 @@ background-color: white;
   display: grid;
   grid-template-rows: 1fr 1fr; 
   background-color: rgb(241, 244, 248);
-  height: 30vh auto;
+  height: 40vh auto;
   text-align: center;
   margin: 2%;
   border-radius: 2%;
@@ -338,7 +338,7 @@ background-color: white;
 }
 
 .Principal-Left h2 {
-  color: #333;
+  color: #2e64f8;
   margin-bottom: 15px;
   text-align: center;
 }
@@ -347,6 +347,9 @@ background-color: white;
   width: 100% !important;
   height: auto !important;
   max-height: 400px;
+}
+footer{
+  color: #0d1186;
 }
 @media (min-width: 1800px) {
   .Menu {
