--- a/public/assets/style-grupos.css
+++ b/public/assets/style-grupos.css
@@ -19,49 +19,39 @@ body {
 
 .wrapper {
     margin-left: 260px;
-    /* Compensa el menú lateral */
     padding: 20px;
 }
 
 
-/* ===== MENÚ LATERAL (MANTENIDO SIN CAMBIOS) ===== */
-
+/* ===== MENÚ ===== */
 nav ul {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 240px;
     position: fixed;
     top: 0;
     left: 0;
-    width: 240px;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #3c0bad;
+    background-color: #1538ac;
+  }
+  
+  nav ul li {
     list-style: none;
-}
-
-.logo {
-    padding: 20px;
-    margin-bottom: 90px;
-}
-
-.logo img {
-    width: 240px;
-    height: 100px;
-    margin-left: -30px;
-}
-
-nav ul li a {
+  }
+  
+  nav ul li a {
     display: block;
-    padding: 15px 0 15px 25px;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 17px;
-    color: #fff;
+    font-family: 'montserrat';
     text-decoration: none;
     text-transform: uppercase;
+    font-size: 17px;
+    color: #fff;
     position: relative;
+    padding: 15px 0px 15px 25px;
     transition: all 0.5s;
-}
-
-nav ul li a:before {
+  }
+  
+  nav ul li a:before {
     content: '';
     position: absolute;
     top: 0;
@@ -72,89 +62,102 @@ nav ul li a:before {
     z-index: -1;
     transition: all 1s;
     width: 0;
-}
-
-nav ul li a:hover {
+  }
+  
+  nav ul li a:hover {
     color: #0d1186;
-}
-
-nav ul li a:hover:before {
+  }
+  
+  nav ul li a:hover:before {
     width: 95%;
-}
-
-.Menu {
-    height: 30%;
-}
-
-.Menu li a img,
-.Prueba li a img {
-    width: 12%;
-    height: 12%;
-    margin: 2%;
-}
-
-.Prueba {
-    margin-top: 56%;
-}
-
-.Prueba li a img {
+  }
+  
+  .logo {
+    padding: 20px;
+    margin-bottom: 90px;
+  }
+  
+  .logo img {
+    height: 100px;
+    width: 240px;
+    margin-left: -30px;
+  }
+  
+ 
+  .Menu {
+    height: 65%; 
+  }
+  .Menu li a img {
+    margin: 3%;
+    height: 15%;
+    width: 15%;
+  }
+  .Prueba {
+    margin-top: 5%;
+  }
+  .Prueba li a img {
+    height: 5%;
+    width: 15%;
     margin-right: 3%;
-}
-
+  }
 
 /* ===== ENCABEZADO (MANTENIDO SIN CAMBIOS) ===== */
 
 .Encabezado {
-    background-color: #4215ac;
+    background-color: #1538ac;
     display: grid;
     grid-template-columns: 80% 10% 10%;
     height: 50%;
-    margin: 0 auto;
-}
+    margin: 0 auto; 
+    margin-top: -20px;
+    margin-right:-20px;
 
-.Encabezado h1 {
+  }
+  
+  .Encabezado h1 {
     color: white;
     font-size: 300%;
     padding-top: 5%;
-    font-family: 'Garamond';
+    font-family: 'Montserrat';
     text-align: center;
-    margin: 0;
+    margin: 0; 
     align-items: center;
-}
-
-.Titulo {
+  }
+  
+  .Titulo {
     margin-left: 15%;
     display: inline-block;
     position: left;
     text-align: left;
-}
-
-.userLogo {
+  }
+  
+  .userLogo {
     display: inline-block;
     position: center;
-}
-
-.userLogo img {
+  }
+  
+  .userLogo img {
     margin: 20%;
     width: 50%;
     height: 60%;
-}
-
-.userLogo img :hover {
+  }
+  
+  .userLogo img:hover {
     transition: 0.3s;
-}
-
-.Usuario {
+  }
+  
+  .Usuario {
     margin-top: 45%;
     margin-left: -15%;
     display: inline-block;
     position: right;
-    color: White;
-}
-
-.Usuario :hover {
+    color: white;
+  }
+  
+  .Usuario:hover {
     color: rgb(32, 223, 236);
-}
+  }
+  
 
 
 /* ===== CONTENIDO PRINCIPAL - AJUSTES ===== */
@@ -170,7 +173,7 @@ nav ul li a:hover:before {
 /* Sección de formulario */
 
 .Contenido-Uno {
-    background-color: hsla(187, 85%, 79%, 0.953);
+    background-color: hsla(0, 0%, 97%, 0.953);
     border-radius: 25px;
     padding: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -425,7 +428,7 @@ table tr:hover {
 
 .pagination {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     margin: 25px 0;
     flex-wrap: wrap;
     gap: 5px;
@@ -460,12 +463,29 @@ footer {
     .wrapper {
         margin-left: 240px;
     }
+    .Menu {
+        height: 65%; 
+      }
+      .Menu li a img {
+        margin: 3%;
+        height: 15%;
+        width: 15%;
+      }
+      .Prueba {
+        margin-top: 5%;
+      }
+      .Prueba li a img {
+        height: 5%;
+        width: 15%;
+        margin-right: 3%;
+      }
 }
 
 @media (max-width: 992px) {
     .form-columns {
         grid-template-columns: 1fr 1fr;
     }
+    
 }
 
 @media (max-width: 768px) {
